# Aeth

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  aeth  aeth.cabal  cabal.project
.github/workflows/: push-to-aur.yml
app/: Main.hs
config/: config.hs  config.hs.legacy  config.toml  rc
docs/: ARCHITECTURE.md  CONFIGURATION.md
src/Aeth/: Config.hs  ConfigFast.hs  Exec.hs  LineEditor.hs  LineEditorVty.hs  Parse.hs  ParseMegaparsec.hs  Shell.hs  ShellFast.hs  Structured.hs  Types.hs
