cabal-version:      3.4
name:               Aeth
version:            0.0.0.0
license:            MIT
author:             prabinpanta0
maintainer:         prabinpanta0
build-type:         Simple

executable Aeth
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts

  other-modules:
    Aeth.Exec
    Aeth.LineEditor
    Aeth.LineEditorVty
    Aeth.Config
    Aeth.Parse
    Aeth.ParseMegaparsec
    Aeth.Shell
    Aeth.Structured
    Aeth.Types

  build-depends:
    , base >=4.14 && <5
    , time
    , transformers
    , directory
    , haskeline
    , mtl
    , process
    , text
    , containers
    , filepath
    , vty
    , vty-unix
    , hint
    , ansi-terminal
    , unix
