cabal-version:      3.4
name:               aeth
version:            0.3.0.0
license:            MIT
author:             prabinpanta0
maintainer:         prabinpanta0
build-type:         Simple

executable aeth
  main-is:          Main.hs
  hs-source-dirs:   app, src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-N -A4m -qn1"
    -fexpose-all-unfoldings
    -fspecialise-aggressively

  other-modules:
    Aeth.Exec
    Aeth.LineEditor
    Aeth.LineEditorVty
    Aeth.Config
    Aeth.ConfigFast
    Aeth.Parse
    Aeth.ParseMegaparsec
    Aeth.Shell
    Aeth.ShellFast
    Aeth.Structured
    Aeth.Types

  build-depends:
    , base >=4.14 && <5
    , time
    , transformers
    , directory
    , haskeline
    , mtl
    , process
    , text
    , containers
    , filepath
    , vty
    , vty-unix
    , hint
    , ansi-terminal
    , unix
    , tomland
